fix: Cambiar npm run build para ejecutar build.sh con bash
Railway Nixpacks no detecta nixpacks.toml y usa config por defecto
que ejecuta 'npm run build'. Cambiamos el script build del package.json
raíz para que ejecute nuestro build.sh que sí funciona.

Antes: npm run build -> nest build (FALLA con 546 errores)
Ahora:  npm run build -> bash build.sh (FUNCIONA, genera dist/main.js)

El build.sh:
- Genera Prisma client
- Compila con tsc (ignora errores TypeScript)
- Verifica que dist/main.js existe

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:web\"",
     "dev:backend": "cd packages/backend && npm run dev",
     "dev:web": "cd packages/web && npm run dev",
-    "build": "./build.sh",
+    "build": "bash build.sh",
     "start:prod": "cd packages/backend && node dist/main",
     "test": "npm run test --workspaces",
     "lint": "npm run lint --workspaces"
