fix: Usar build.sh que tolera errores de TypeScript

--- a/packages/backend/nixpacks.toml
+++ b/packages/backend/nixpacks.toml
@@ -7,7 +7,7 @@ cmds = ["npm install"]
 [phases.build]
 cmds = [
   "npx prisma generate",
-  "npx tsc || true"
+  "bash ../../build.sh"
 ]
 
 [start]
