fix: Add .sh files to watchPatterns and force rebuild

--- a/packages/backend/railway.toml
+++ b/packages/backend/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "NIXPACKS"
-watchPatterns = ["**/*.ts", "**/*.js", "prisma/**/*"]
+watchPatterns = ["**/*.ts", "**/*.js", "**/*.sh", "prisma/**/*"]
 
 [deploy]
 startCommand = "bash start.sh"
