fix: Exclude packages/web from backend deployment
- Add packages/web to .nixpacksignore to prevent Railway from detecting frontend
- Backend service should only build and run packages/backend
- Fixes issue where Railway was trying to start Next.js instead of NestJS

--- a/.nixpacksignore
+++ b/.nixpacksignore
@@ -1,3 +1,7 @@
 # Ignore Prisma auto-detection - we handle it manually in build phase
 packages/backend/prisma/schema.prisma
 prisma/schema.prisma
+
+# Ignore frontend package to prevent auto-detection
+packages/web/
+packages/web/**
