fix: Update Railway configuration to only deploy backend package
- Add packages/web, blockchain, and shared to .railwayignore
- Update railway.json to include npm install in build command
- Add watchPatterns to only monitor backend changes

This ensures Railway deploys only the backend NestJS application
and ignores the Next.js web package.

--- a/.railwayignore
+++ b/.railwayignore
@@ -1,3 +1,13 @@
 **/Dockerfile
 **/Dockerfile.*
 **/.dockerignore
+
+# Ignore web package - only deploy backend
+packages/web
+packages/blockchain
+packages/shared
+
+# Ignore non-essential directories
+.git
+node_modules
+*.log
