fix: Add start script to root package.json for Railway
- Add 'start' script in root package.json pointing to backend start.sh
- Simplify railway.json to use root npm scripts (build and start)
- This ensures Railway uses the correct backend package instead of web

The start command now explicitly runs the backend service.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:backend": "cd packages/backend && npm run dev",
     "dev:web": "cd packages/web && npm run dev",
     "build": "bash build.sh",
+    "start": "cd packages/backend && bash start.sh",
     "start:prod": "cd packages/backend && node dist/main",
     "test": "npm run test --workspaces",
     "lint": "npm run lint --workspaces"
