fix: Use RAILWAY_ROOT_DIRECTORY to deploy from packages/backend
BREAKING CHANGE: Set RAILWAY_ROOT_DIRECTORY=packages/backend environment variable

This is the correct way to deploy a subdirectory in Railway. All paths
in nixpacks.toml, railway.json, and Procfile now assume we're already
in the backend directory.

Changes:
- Remove all 'cd packages/backend' from config files
- Simplify nixpacks.toml commands
- Update railway.json startCommand
- Update Procfile web command
- Restore package.json (Railway needs it for git operations)

With RAILWAY_ROOT_DIRECTORY set, Railway will automatically change to
packages/backend before running install, build, and start commands.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,24 +6,22 @@ cmds = [
   "echo '=== NIXPACKS INSTALL PHASE ==='",
   "pwd",
   "ls -la | head -20",
-  "echo 'Changing to backend directory...'",
-  "cd packages/backend && pwd",
-  "echo 'Installing dependencies...'",
-  "cd packages/backend && npm install"
+  "echo 'Installing backend dependencies...'",
+  "npm install"
 ]
 
 [phases.build]
 cmds = [
   "echo '=== NIXPACKS BUILD PHASE ==='",
-  "cd packages/backend && pwd",
+  "pwd",
   "echo 'Generating Prisma Client...'",
-  "cd packages/backend && npx prisma generate",
+  "npx prisma generate",
   "echo 'Building TypeScript...'",
-  "cd packages/backend && npm run build",
+  "npm run build",
   "echo 'Verifying build output...'",
-  "cd packages/backend && ls -la dist/ | head -20",
-  "cd packages/backend && test -f dist/main.js && echo 'BUILD SUCCESS: dist/main.js exists' || echo 'BUILD FAILED: dist/main.js not found'"
+  "ls -la dist/ | head -20",
+  "test -f dist/main.js && echo 'BUILD SUCCESS: dist/main.js exists' || echo 'BUILD FAILED: dist/main.js not found'"
 ]
 
 [start]
-cmd = "cd packages/backend && bash start.sh"
+cmd = "bash start.sh"
