fix: COMPLETELY REMOVE web package and simplify configuration
BREAKING CHANGE: Permanently deleted packages/web directory

Changes:
- Deleted packages/web.backup completely (not just renamed)
- Updated .railwayignore to remove web.backup reference
- Now only packages/backend exists in packages/

This removes ALL traces of the web package that Railway was trying to find.
With RAILWAY_ROOT_DIRECTORY=packages/backend, Railway should now only see
the backend package.json and deploy correctly.

--- a/.railwayignore
+++ b/.railwayignore
@@ -2,8 +2,7 @@
 **/Dockerfile.*
 **/.dockerignore
 
-# Ignore web package - only deploy backend
-packages/web.backup
+# Only deploy backend - ignore everything else
 packages/blockchain
 packages/shared
 
@@ -11,3 +10,4 @@ packages/shared
 .git
 node_modules
 *.log
+*.md
