--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build 2>&1 | tee /tmp/build.log || (test -d .next && echo 'Build completed with errors but .next exists' && exit 0)",
-    "build:safe": "next build || echo 'Build had errors but continuing'",
-    "start": "next start",
+    "build": "next build",
+    "build:safe": "next build || (test -d .next && echo '✓ Build completed with prerender errors but .next exists' && exit 0) || exit 1",
+    "start": "next start -p ${PORT:-3000}",
     "lint": "next lint",
     "analyze": "ANALYZE=true npm run build",
     "test": "vitest run",
